tests/NormalTests/paczka1/fuzzy1/15771677.err
Error in line 15: 4aU2erREI A441 98,0
Error in line 24: zY8AaOoAadi A441 413,7
Error in line 21: S81 A972 21,0
Error in line 25: CfF A972 38,9
Error in line 33: S81 A441 43,92
Error in line 28: S81 A222 56,1
Error in line 30: CfF S81 32,2
Error in line 32: KqtwwK S81 17,2
